# hiddenbot

./: .gitignore  LICENSE  README.md  hiddenwiki.json  mypy.ini  pyproject.toml
assets/: onion_urls.json
hiddenbot/: config.py  main.py  save.py  tor.py  urls.py
hiddenbot/crawl/: crawler.py  extractor.py  result.py  utils.py
